primitives/api/test/tests/ui/staging_fn_wo_staging_api.stderr
error: Found `cfg_attr` for implementation function but the trait is not versioned
  --> tests/ui/staging_fn_wo_staging_api.rs:25:3
   |
25 |         #[cfg_attr(feature = "enable-staging-api", api_version(99))]
   |         ^

error: Put a `cfg_attr` here
  --> tests/ui/staging_fn_wo_staging_api.rs:20:2
   |
20 |     impl self::Api1<Block> for Runtime {
   |     ^^^^
